testing/framework/resources/Functional/Failing/sandbox/logs/4.q
select * from logs where dir0='2013' limit 10;
